fix: decrease brightness slightly on blurred background image for HeroSlide

--- a/src/components/HeroSlide.module.scss
+++ b/src/components/HeroSlide.module.scss
@@ -31,7 +31,7 @@
             top: 0;
             left:0;
             z-index: 1;
-            filter: blur(5px) grayscale(15%);
+            filter: blur(5px) grayscale(30%) brightness(70%);
             transform: scale(1.06);
         }
     }
